# zeal-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  configyml  feature_request.yml
.github/workflows/: build.yml  build_binaries.yml  code_analysis_pull.yml  code_analysis_push.yml  codeql-security-analysis.yml  pypi_build.yml  tests.yml
build_system/: update_version.py
docs/: CONTRIBUTING.md  INDEX.md  README.md  development.md  git_workflow.md  scripts.md  tickets.md  usage.md
src/: zeal_cli.py
src/zeal/: __init__.py  config.py  docset.py  download_docset.py  downloads.py  exceptions.py  filesystem.py  list_docsets.py  version.py
src/zeal_cli/: __init__.py  __main__.py
src/zeal_cli/zeal/: config.py  docset.py  downloads.py  version.py
tests/: conftest.py
tests/unit/: test_config.py  test_docset.py  test_download_docset.py  test_downloads.py  test_list_docsets.py
